# DiceBot

./: README.md  pyproject.toml
src/: bot.py
